--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.28.0
+streamlit==1.38.0
 gTTS==2.5.4
-SpeechRecognition==3.11.0
-pydub==0.25.1
-
+openai-whisper==20231117
+torch==2.3.0
